# shadowverse-desktop-rework

./: Cargo.toml  README.md  build.rs  config.yaml
cards_updater/: Cargo.toml
cards_updater/src/: get_cards.rs  get_number_of_cards.rs  lib.rs
data/: Cargo.toml
data/src/: cards.rs  collection.rs  config.rs  db.rs  deck.rs  environment.rs  lib.rs
data/src/db/: card.rs  collection.rs  deck.rs  extension.rs  init.rs  mod.rs
src/: app.rs  executor.rs  logger.rs  main.rs  theme.rs  widget.rs
src/screens/: cards_list.rs  extensions_list.rs  mod.rs  update.rs
src/theme/: application.rs  button.rs  combo_box.rs  container.rs  progress_bar.rs  scrollable.rs  svg.rs  table_row.rs  text.rs  text_input.rs
src/widgets/: sidebar.rs
widgets/: Cargo.toml
widgets/src/header/: mod.rs  style.rs
widgets/src/table_row/: mod.rs  style.rs
