[package]
name = "shadowverse_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.0", features = ["debug", "svg"] }
data = { path = "data" }
widgets = { path = "widgets" }
cards_updater = { path = "cards_updater" }
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }

[workspace]
members = [ "cards_updater", "data", "widgets" ]
