[package]
name = "cards_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.6", features = ["default", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
data = { path = "../data/" }
scraper = "0.19.0"
thiserror = "1.0.58"
