[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.57"
tracing = "0.1.40"
